2002-03-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/context.py: Permit Unicode strings throughout.
	* qm/test/result.py: Likewise.

2002-03-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/doc/tour.xml: Update tutorial instructions to reflect
	changes in QMTest 1.1.2.
	* qm/test/share/dtml/set-expectations.dtml: Clarify form.

	* configure.in (PYTHON_MAJOR): Robustify checks.
	(PYTHON_MINOR): Likewise.
	* configure: Regenerated.
	* qm/web.py (DocumentTemplate): Guard import with try-block to
	improve error messages.

2002-03-09  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/share/dtml/results.dtml: Simplify.
	* qm/test/web/web.py (StorageResultsStream.__init__): Initialize
	__test_results_in_order.
	(StorageResultsStream.WriteResult): Update it.
	(StorageResultsStream.Start): Likewise.
	(StorageResultsStream.GetTestResultsInOrder): New method.
	(TestResultsPage.__init__): Use it.
	(TestResultsPage.GetTotalUnexpected): Take advantage of the fact
	that test_results is now a list, not a dictionary.
	(TestResultsPage.GetResultsWithOutcome): Likewise.	
	(TestResultsPage.GetTestIds): Remove.

	* qm/test/web/web.py (StorageResultsStream.Start): Add test_ids
	parameter; remove existing results for tests that are going to be
	re-run.

	* qm/common.py (starts_with): Simplify.
	(ends_with): Likewise.
	(parse_assignment): New function.
	(read_assignments): Likewise.
	* qm/test/cmdline.py (context_file_name): New member.
	(QMTest.MakeContext): Use read_assignments.
	(QMTest.__ParseContextAssignment): Remove.
	(QMTest.__ParseKeywordArgument): Likewise.
	(QMTest.__ExecuteCreateTdb): Use parse_assignment.
	* qm/test/qmtest.py: Tidy interrupted message.
	* qm/test/share/dtml/load-expected-results.dtml: Remove.
	* qm/test/share/dtml/load-results.dtml: Likewise.
	* qm/test/share/dtml/load.dtml: New file.
	* qm/test/share/dtml/navigation-bar.dtml (load_context): New
	function.
	* qm/test/share/dtml/set-expectation.dtml: New file.