@@ -1,5 +1,7 @@
 2002-03-10  Mark Mitchell  <mark@codesourcery.com>
 
+	* qm/common.py (string_types): New variable.
+
 	* qm/test/context.py: Permit Unicode strings throughout.
 	* qm/test/result.py: Likewise.
 
